--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         <h2>Contact Information</h2>
         <p>If you have any questions about this Privacy Policy or our data practices, please contact us:</p>
         <p>
-            <strong>Email:</strong> <a href="mailto:privacy@splitxpense.com">privacy@splitxpense.com</a><br>
+            <strong>Email:</strong> <a href="mailto:tha_ultima@hotmail.com">tha_ultima@hotmail.com</a><br>
             <strong>Website:</strong> <a href="https://splitxpense.github.io">https://splitxpense.github.io</a>
         </p>
     </div>
